unpackaged/main/default/objects/CampaignMember/fields/Internal_Combo_UTM__c.field-meta.xml
<CustomField>
    <fullName>Internal_Combo_UTM__c</fullName>
    <label>Internal Combo UTM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>