unpackaged/main/default/objects/CampaignMember/fields/Internal_URL_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Internal_URL_Referrer__c</fullName>
    <label>Internal URL Referrer</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>