unpackaged/main/default/objects/CampaignMember/fields/Last_Activity_Age__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Age__c</fullName>
    <formula>(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Last_Activity_on_Lead_Contact__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Last_Activity_on_Lead_Contact__c  - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>