unpackaged/main/default/objects/CampaignMember/fields/Last_Activity_on_Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_on_Lead_Contact__c</fullName>
    <formula>IF( ISBLANK(ContactId) , Lead.LastActivityDate  , Contact.LastActivityDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity on Lead/Contact</label>
    <type>Date</type>
</CustomField>