unpackaged/main/default/objects/CampaignMember/fields/Lead_Contact_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_Owner_Role__c</fullName>
    <formula>IF(NOT(ISBLANK( ContactId )), Contact.Owner_Role__c , Lead.Owner_Role__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead/Contact Owner Role</label>
    <type>Text</type>
</CustomField>