unpackaged/main/default/objects/CampaignMember/fields/MAa__c.field-meta.xml
<CustomField>
    <fullName>MAa__c</fullName>
    <formula>IF(NOT(ISBLANK( ContactId )),  Contact.Account_Owner_Role__c  ,  Lead.Matched_Account_Owner_Role__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account Owner Role</label>
    <type>Text</type>
</CustomField>