unpackaged/main/default/objects/CampaignMember/fields/Marketing_Audience__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Audience__c</fullName>
    <label>Marketing Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>