unpackaged/main/default/objects/CampaignMember/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <label>Marketing Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>