unpackaged/main/default/objects/CampaignMember/fields/Marketing_Content__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Content__c</fullName>
    <label>Marketing Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>