unpackaged/main/default/objects/CampaignMember/fields/Marketing_CTA__c.field-meta.xml
<CustomField>
    <fullName>Marketing_CTA__c</fullName>
    <label>Marketing CTA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>