unpackaged/main/default/objects/CampaignMember/fields/Marketing_Page__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Page__c</fullName>
    <label>Marketing Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>