unpackaged/main/default/objects/CampaignMember/fields/Marketing_Placement__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Placement__c</fullName>
    <label>Marketing Placement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>