unpackaged/main/default/objects/CampaignMember/fields/Marketing_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source__c</fullName>
    <label>Marketing Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>