unpackaged/main/default/objects/CampaignMember/fields/Marketing_Tech__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tech__c</fullName>
    <label>Marketing Tech</label>
    <length>255</length>
    <type>Text</type>
</CustomField>