unpackaged/main/default/objects/CampaignMember/fields/Marketing_Term__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Term__c</fullName>
    <label>Marketing Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>