unpackaged/main/default/objects/CampaignMember/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <formula>IF(NOT(ISBLANK( ContactId )),  Contact.Account.Name , Lead.Matched_Account_Name__c )</formula>
    <label>Matched Account</label>
    <type>Text</type>
</CustomField>