unpackaged/main/default/objects/CampaignMember/fields/Matched_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Id__c</fullName>
    <formula>IF(
   NOT(ISBLANK(ContactId)),
   CASESAFEID(Contact.Account.Id),
   CASESAFEID(Lead.LeanData__Reporting_Matched_Account__r.Id)
  )</formula>
    <label>Matched Account Id</label>
    <type>Text</type>
</CustomField>