unpackaged/main/default/objects/CampaignMember/fields/Matched_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Owner__c</fullName>
    <formula>IF(NOT(ISBLANK( ContactId )), Contact.Account.Owner.FirstName &amp; " " &amp; Contact.Account.Owner.LastName , Lead.Matched_Account_Owner__c)</formula>
    <label>Matched Account Owner</label>
    <type>Text</type>
</CustomField>