unpackaged/main/default/objects/CampaignMember/fields/Matched_Account_SDR__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_SDR__c</fullName>
    <formula>IF(NOT(ISBLANK( ContactId )),   Contact.Account.Mapped_SDR_Name__c ,  Lead.Matched_Account_SDR__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account SDR</label>
    <type>Text</type>
</CustomField>