unpackaged/main/default/objects/CampaignMember/fields/Matched_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Status__c</fullName>
    <formula>IF(NOT(ISBLANK( ContactId )),  Contact.Account.Status__c  , Lead.Matched_Account_Status__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account Status</label>
    <type>Text</type>
</CustomField>