unpackaged/main/default/objects/CampaignMember/fields/Member_owned_by_my_team__c.field-meta.xml
<CustomField>
    <fullName>Member_owned_by_my_team__c</fullName>
    <formula>(IF( ISBLANK(ContactId) ,  Lead.Owner:User.ManagerId  ,  Contact.Owner.ManagerId )) = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member owned by my team?</label>
    <type>Checkbox</type>
</CustomField>