unpackaged/main/default/objects/CampaignMember/fields/Member_owned_by_running_user__c.field-meta.xml
<CustomField>
    <fullName>Member_owned_by_running_user__c</fullName>
    <formula>(IF( ISBLANK(ContactId) ,  Lead.OwnerId , Contact.OwnerId ))  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member owned by running user</label>
    <type>Checkbox</type>
</CustomField>