unpackaged/main/default/objects/CampaignMember/fields/Opp_created_by_running_user__c.field-meta.xml
<CustomField>
    <fullName>Opp_created_by_running_user__c</fullName>
    <formula>CFCR_OPP_User__c = $User.FirstName + " " + $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp created by running user</label>
    <type>Checkbox</type>
</CustomField>