unpackaged/main/default/objects/CampaignMember/fields/Opportunity_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Role__c</fullName>
    <formula>FCRM__FCR_Opportunity__r.Opportunity_Owner_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Role</label>
    <type>Text</type>
</CustomField>