unpackaged/main/default/objects/CampaignMember/fields/Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail__c</fullName>
    <formula>Campaign.Product_Detail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Detail</label>
    <type>Text</type>
</CustomField>