unpackaged/main/default/objects/CampaignMember/fields/Reply_SL__c.field-meta.xml
<CustomField>
    <fullName>Reply_SL__c</fullName>
    <label>Reply SL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>