unpackaged/main/default/objects/CampaignMember/fields/SAL_datetime__c.field-meta.xml
<CustomField>
    <fullName>SAL_datetime__c</fullName>
    <formula>DATETIMEVALUE( FCRM__FCR_SAR_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAL datetime</label>
    <type>DateTime</type>
</CustomField>