unpackaged/main/default/objects/CampaignMember/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>IF(NOT(ISBLANK( ContactId )),  Contact.mkto71_Lead_Score__c  ,  Lead.mkto71_Lead_Score__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>