unpackaged/main/default/objects/CampaignMember/fields/Score_Details__c.field-meta.xml
<CustomField>
    <fullName>Score_Details__c</fullName>
    <formula>IF(NOT(ISBLANK( ContactId )),  Contact.Score_Details__c  ,  Lead.Score_Details__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Details</label>
    <type>Text</type>
</CustomField>