unpackaged/main/default/objects/CampaignMember/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <formula>if(Employees__c  &gt; 5000, "Strategic",
if(Employees__c &gt; 1000, "Enterprise", 
if(Employees__c &gt; 0, "Commercial", "Unknown")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>