unpackaged/main/default/objects/CampaignMember/fields/signup_form__c.field-meta.xml
<CustomField>
    <fullName>signup_form__c</fullName>
    <label>Trial Signup Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cloud_trial</fullName>
            </value>
            <value>
                <fullName>community</fullName>
            </value>
            <value>
                <fullName>dashboard_review</fullName>
            </value>
            <value>
                <fullName>user_invite</fullName>
            </value>
            <value>
                <fullName>staff</fullName>
            </value>
            <value>
                <fullName>grafanau</fullName>
            </value>
            <value>
                <fullName>marketplace_gcp</fullName>
            </value>
            <value>
                <fullName>marketplace_azure</fullName>
            </value>
            <value>
                <fullName>marketplace_amg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>