unpackaged/main/default/objects/CampaignMember/fields/Technology_Detail__c.field-meta.xml
<CustomField>
    <fullName>Technology_Detail__c</fullName>
    <formula>Campaign.Technology_Detail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technology Detail</label>
    <type>Text</type>
</CustomField>