unpackaged/main/default/objects/CampaignMember/fields/Trial_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Cancelled_Date__c</fullName>
    <label>Trial to Free Date</label>
    <type>DateTime</type>
</CustomField>