unpackaged/main/default/objects/CampaignMember/fields/Trial_Churn_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Churn_Date__c</fullName>
    <label>Paid to Free Date</label>
    <type>DateTime</type>
</CustomField>