unpackaged/main/default/objects/CampaignMember/fields/Trial_Email_Only_Sign_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Email_Only_Sign_Up_Date__c</fullName>
    <label>Trial Email Only Sign Up Date</label>
    <type>DateTime</type>
</CustomField>