unpackaged/main/default/objects/CampaignMember/fields/Trial_Engaged_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Engaged_Date__c</fullName>
    <label>Trial Engaged Date</label>
    <type>DateTime</type>
</CustomField>