unpackaged/main/default/objects/CampaignMember/fields/Trial_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Paid_Date__c</fullName>
    <label>Trial Paid Date</label>
    <type>DateTime</type>
</CustomField>