unpackaged/main/default/objects/CampaignMember/fields/Trial_Signed_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Signed_Up_Date__c</fullName>
    <label>Trial Signed Up Date</label>
    <type>DateTime</type>
</CustomField>