unpackaged/main/default/objects/CampaignMember/fields/Trial_Verified_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Verified_Email_Date__c</fullName>
    <label>Trial Verified Email Date</label>
    <type>DateTime</type>
</CustomField>