unpackaged/main/default/objects/CampaignMember/fields/Use_Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Detail__c</fullName>
    <formula>Campaign.Use_Case_Detail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Case Detail</label>
    <type>Text</type>
</CustomField>