unpackaged/main/default/objects/CampaignMember/fields/UTM_Source_on_Create__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source_on_Create__c</fullName>
    <label>UTM Source (on Create)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>