unpackaged/main/default/objects/CampaignMember/fields/UTM_Source_On_Update__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source_On_Update__c</fullName>
    <label>UTM Source (On Update)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>