unpackaged/main/default/objects/CampaignMember/fields/VConf_Days_Attended__c.field-meta.xml
<CustomField>
    <fullName>VConf_Days_Attended__c</fullName>
    <description># of days a virtual conference attendee viewed live content</description>
    <label>VConf # Days Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>