unpackaged/main/default/objects/CampaignMember/fields/VConf_Last_Day_Attended__c.field-meta.xml
<CustomField>
    <fullName>VConf_Last_Day_Attended__c</fullName>
    <description>The most recent day a virtual conference attendee has viewed content live</description>
    <label>VConf Last Day Attended</label>
    <type>DateTime</type>
</CustomField>